# donation-tracker

./: .gitignore  README.md  pyproject.toml
data/: donations.csv
donationtracker/: __main__.py  app.py
